# RustymonData

./: .gitmodules  Makefile  PokeWorldGenerator.cpp  README.md  conv_spawn_relations.py  requirements.txt
.github/workflows/: build.yaml
pokeworld/: PokeWorldEnums.hpp  classes.py  parsers.py
spawning/: __init__.py  common.py  conv_spawn_relations.py  gen_spawn_relations.py
src/: PokeWorldEnums.hpp  PokeWorldFields.hpp  PokeWorldGenerator.cpp  classes.py  config.cpp  enums.hpp  exporter.cpp  generator.hpp  main.cpp  osmium_amenity_list.cpp  osmium_area_test.cpp  poke_world_enums.hpp  queue.hpp  world_gen_test_http_server.py  world_generator.cpp
world/: CMakeLists.txt  Makefile  README.md  config.cpp  config.hpp  config.json  constants.hpp  exporter.cpp  exporter.hpp  generator.cpp  generator.hpp  generator_helpers.hpp  main.cpp  queue.hpp  rustymon_constants.hpp  rustymon_enums.hpp  stash.cpp  stash.hpp  structs.cpp  structs.hpp  threading.cpp  threading.hpp  worker.cpp  world_gen_test_http_server.py  world_generator.cpp  world_generator_class.hpp  world_generator_helpers.hpp
world/cmake/: FindOsmium.cmake  FindProtozero.cmake
